--- a/beachcomb-service/src/main/resources/application.properties
+++ b/beachcomb-service/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=beachcomb-service
+spring.data.mongodb.uri=mongodb://root:example@127.0.0.1:27017
+spring.data.mongodb.database=beachcombDB
