--- a/datafeeder/src/main/resources/application.properties
+++ b/datafeeder/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=datafeeder
 server.port=8010
 logging.level.dse=DEBUG
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+spring.main.allow-bean-definition-overriding=true
