Added beachcomb-service to docker compose

--- a/beachcomb-service/src/main/resources/application.properties
+++ b/beachcomb-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=beachcomb-service
-spring.data.mongodb.uri=mongodb://root:example@127.0.0.1:27017
+spring.data.mongodb.uri=mongodb://root:example@mongo:27017
 spring.data.mongodb.auto-index-creation=true
 spring.data.mongodb.database=beachcombDB
+spring.rabbitmq.host=rabbitmq
