--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,11 +34,11 @@ services:
       retries: 5
       start_period: 10s
 
-  beachcomb_service:
+  beachcombservice:
     build:
       context: ./beachcomb-service
       dockerfile: Dockerfile-beachcomb
-    container_name: "beachcomb_service"
+    container_name: "beachcombservice"
     ports:
       - 8000:8080
     depends_on:
@@ -50,11 +50,11 @@ services:
       RABBITMQ_HOST: rabbitmq
       MONGO_URI: "mongodb://root:example@mongo:27017"
 
-  control_service:
+  controlservice:
     build:
       context: ./python-services
       dockerfile: Dockerfile-control
-    container_name: "control_service"
+    container_name: "controlservice"
     ports:
       - 8002:8002
     depends_on:
@@ -66,11 +66,11 @@ services:
       RABBITMQ_HOST: rabbitmq
       MONGO_URI: "mongodb://root:example@mongo:27017"
 
-  inventory_service:
+  inventoryservice:
     build:
       context: ./python-services
       dockerfile: Dockerfile-inventory
-    container_name: "inventory_service"
+    container_name: "inventoryservice"
     ports:
       - 8001:8001
     depends_on:
