Fixed error where two simulation instances (containing both vehicle simulations) where running, and thus it led to bad behavior.

--- a/datafeeder/src/main/resources/application.properties
+++ b/datafeeder/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=datafeeder
 server.port=8010
-logging.level.dse=DEBUG
+logging.level.dse=INFO
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
