--- a/k8s/dse2024_ingress.yaml
+++ b/k8s/dse2024_ingress.yaml
@@ -2,29 +2,28 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: dse2024-ingress
-  #annotations:
+  annotations:
+    kubernetes.io/ingress.class: "gce"
   #  nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
-  ingressClassName: nginx
   rules:
-    - host: pathway.example
-      http:
+    - http:
         paths:
-          - path: /inventory     # (/|$)(.*)
+          - path: /inventory
             pathType: Prefix
             backend:
               service:
                 name: inventory-service
                 port:
                   number: 8001
-          - path: /beachcomb     # (/|$)(.*)
+          - path: /beachcomb
             pathType: Prefix
             backend:
               service:
                 name: beachcomb-service
                 port:
                   number: 8080
-          - path: /control     # (/|$)(.*)
+          - path: /control
             pathType: Prefix
             backend:
               service:
@@ -32,13 +31,13 @@ spec:
                 port:
                   number: 8002
 
-    - host: rabbit.example
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: rabbitmq-ui-service
-                port:
-                  number: 15672
+#    - host: rabbit.example
+#      http:
+#        paths:
+#          - path: /
+#            pathType: Prefix
+#            backend:
+#              service:
+#                name: rabbitmq-ui-service
+#                port:
+#                  number: 15672
