--- a/k8s/control_deployment.yaml
+++ b/k8s/control_deployment.yaml
@@ -16,8 +16,8 @@ spec:
     spec:
       containers:
         - name: control
-          image: docker.io/library/control_service:latest
-          imagePullPolicy: Never
+          image: europe-west3-docker.pkg.dev/dse24-group-12/dse-repo/control_service:latest
+          # imagePullPolicy: Never
           ports:
             - containerPort: 8002
           env:
