k8s: added dashboard files

--- a/k8s/dse2024_ingress.yaml
+++ b/k8s/dse2024_ingress.yaml
@@ -30,6 +30,14 @@ spec:
                 name: control-service
                 port:
                   number: 8002
+          - path: /dashboard
+            pathType: Prefix
+            backend:
+              service:
+                name: dashboard-service
+                port:
+                  number: 4200
+
 
 #    - host: rabbit.example
 #      http:
