k8s: updated dashboard probes path

--- a/k8s/dashboard_deployment.yaml
+++ b/k8s/dashboard_deployment.yaml
@@ -22,9 +22,9 @@ spec:
             - containerPort: 4200
           readinessProbe:
             httpGet:
-              path: /
+              path: /dashboard
               port: 4200
           livenessProbe:
             httpGet:
-              path: /
+              path: /dashboard
               port: 4200
