--- a/python-services/pyproject.toml
+++ b/python-services/pyproject.toml
@@ -14,6 +14,10 @@ pymongo = "^4.7.1"
 pika = "^1.3.2"
 requests = "^2.31.0"
 schedule = "^1.2.1"
+httpx = "^0.27.0"
+mongomock = "^4.1.2"
+pytest-mock = "^3.14.0"
+pymongo-inmemory = "^0.4.2"
 
 
 [tool.poetry.group.dev.dependencies]
