datafeeder: Updated paths and rabbitmq credentials

--- a/datafeeder/src/main/resources/application.properties
+++ b/datafeeder/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=datafeeder
 server.port=8010
 logging.level.dse=INFO
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=34.141.72.250
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.password=secret
 
 spring.main.allow-bean-definition-overriding=true
